Integrate Clerk authentication and update dependencies
- Add ClerkProvider to manage authentication state
- Implement SignIn and SignUp buttons for user authentication
- Update environment variables for Clerk integration
- Add @clerk/nextjs dependency to package.json and package-lock.json
- Refactor layout component to include authentication UI

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL="postgresql://postgres.jwqbposhqtvxqmjprfgu:Bandar501@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres"
-
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZGVzaXJlZC1jYWltYW4tNzUuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_2NU9vGQh04VakceM0gsAgkNDrYgTiAUiE7SchvIGwB
