--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@supabase/supabase-js": "^2.50.2",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
